--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p class="title_name">Chennai Talents Pickleball Academy</p>
                     <p class="desc">Learn pickleball professionally</p>
                     <p class="org">Organized for both <strong>Children</strong> & <strong>Adults</strong>. <br> Organized by skill level: <strong><u>Beginner</u></strong>, <strong><u>Intermediate</u></strong>, <strong><u>Advanced</u></strong> & <strong><u>Pro</u></strong></p>
-                    <p class="cta">For More Information, Contact <br><a href="+91 73582 28529">+91 73582 28529</a></p>
+                    <p class="cta">For More Information, Contact <br><a href="tel:+91 73582 28529">+91 73582 28529</a></p>
                 </div>
             </div>
         </div>
@@ -578,13 +578,14 @@
             </p>
         </div>
         <div class="col col3 footer_ps">
-            <img class="footer_icon" src="./assets/favicon.ico" alt="">
+            <img class="footer_icon" src="./assets/navbar_logo.jpg" alt="">
         </div>
         <div class="col col2 footer_ps">
-            <p>Services</p>
-            <p>Products</p>
-            <p>Join our team</p>
-            <p>Partner with us</p>
+            <p><a href="#sessions">Sessions</a></p>
+            <p><a href="#coaches">Coaches</a></p>
+            <p><a href="#pricing">Pricing</a></p>
+            <p><a href="tel:+91 73582 28529">Contact</a></p>
+            <p><a href="#pricing">Join our team</a></p>
         </div>
         <div class="backdrop"></div>
     </footer>
