fixed whatsapp issue

--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
                     <p id="myText">tennisvimal-2@okaxis</p>
                     <button class="copy-btn" onclick="copyContent()">Copy!</button>
 
-                    <blockquote>Please send a WhatsApp message with a screenshot of your confirmation to <a target="_blank" href="https://wa.link/u7kqa3">7358228529</a>.</blockquote>
+                    <blockquote>Please send a WhatsApp message with a screenshot of your confirmation to <a target="_blank" href="https://wa.link/9hdd5y">7358228529</a>.</blockquote>
                 </div>
             </div>
         </div>
