--- a/index.html
+++ b/index.html
@@ -29,40 +29,46 @@
 </head>
 
 <body>
-    <!-- Navbar -->    
-    <nav class="sticky navbar">
-        <div class="brand  display__logo">
-            <a href="#home" class="nav__link"> <span class="logoo"><img src="./assets/navbar_logo.jpg" alt=""></span></a>
+    <!-- Navbar -->
+    <header>
+        <div class="container">
+            <nav id="navigation">
+                <a href="#" class="logo"><img src="./assets/navbar_logo.jpg" alt=""></a>
+                <a aria-label="mobile menu" class="nav-toggle">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </a>
+                <ul class="menu-left">
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#sessions">Sessions</a></li>
+                    <li><a href="#coaches">Coaches</a></li>
+                    <li><a href="#pricing">Pricing</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+            </nav>
         </div>
-    
-        <input type="checkbox" id="nav" class="hidden" />
-        <label for="nav" class="nav__open"><i></i><i></i><i></i></label>
-        <div class="nav">
-            <ul class="nav__items">
-                <li class="nav__item"><a href="#home" class="nav__link">Home</a></li>
-                <li class="nav__item"><a href="#sessions" class="nav__link">Sessions</a></li>
-                <li class="nav__item"><a href="#coaches" class="nav__link">Coaches</a></li>
-                <li class="nav__item"><a href="#pricing" class="nav__link">Pricing</a></li>
-                <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
-            </ul>
-        </div>
-    </nav>
+    </header>
     <!-- End of Navbar -->
 
     <!-- Hero Section -->
-     <section id="home">
+    <section id="home">
         <div class="container">
             <div class="home">
                 <img src="./assets/banner.jpg" alt="">
                 <div class="hero-section">
                     <p class="title_name">Chennai Talents Pickleball Academy</p>
                     <p class="desc">Learn pickleball professionally</p>
-                    <p class="org">Organized for both <strong>Children</strong> & <strong>Adults</strong>. <br> Organized by skill level: <strong><u>Beginner</u></strong>, <strong><u>Intermediate</u></strong>, <strong><u>Advanced</u></strong> & <strong><u>Pro</u></strong></p>
-                    <p class="cta">For More Information, Contact <br><a href="tel:+91 73582 28529">+91 73582 28529</a></p>
+                    <p class="org">Organized for both <strong>Children</strong> & <strong>Adults</strong>. <br>
+                        Organized by skill level: <strong><u>Beginner</u></strong>,
+                        <strong><u>Intermediate</u></strong>, <strong><u>Advanced</u></strong> &
+                        <strong><u>Pro</u></strong></p>
+                    <p class="cta">For More Information, Contact <br><a href="tel:+91 73582 28529">+91 73582 28529</a>
+                    </p>
                 </div>
             </div>
         </div>
-     </section>
+    </section>
     <!-- End of Hero Section -->
 
     <!-- Sessions -->
@@ -555,7 +561,8 @@
                     <p id="myText">tennisvimal-2@okaxis</p>
                     <button class="copy-btn" onclick="copyContent()">Copy!</button>
 
-                    <blockquote>Please send a WhatsApp message with a screenshot of your confirmation to <a target="_blank" href="https://wa.link/9hdd5y">7358228529</a>.</blockquote>
+                    <blockquote>Please send a WhatsApp message with a screenshot of your confirmation to <a
+                            target="_blank" href="https://wa.link/9hdd5y">7358228529</a>.</blockquote>
                 </div>
             </div>
         </div>
@@ -595,6 +602,95 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+        <!-- Navbar -->
+    <script>
+        // NAVIGATION LOGO SCROLL TOP
+        document.querySelector('.logo').addEventListener('click', function (e) {
+            e.preventDefault();
+            document.querySelector('.nav-toggle').classList.remove('open');
+            document.querySelector('.menu-left').classList.remove('collapse');
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+
+        // LINKS TO ANCHORS
+        document.querySelectorAll('a[href^="#"]').forEach(function (link) {
+            link.addEventListener('click', function (event) {
+                var target = document.querySelector(this.getAttribute('href'));
+
+                if (target) {
+                    event.preventDefault();
+                    window.scrollTo({
+                        top: target.offsetTop,
+                        behavior: 'smooth'
+                    });
+                }
+            });
+        });
+
+        // TOGGLE HAMBURGER & COLLAPSE NAV
+        document.querySelector('.nav-toggle').addEventListener('click', function () {
+            this.classList.toggle('open');
+            document.querySelector('.menu-left').classList.toggle('collapse');
+        });
+
+        // REMOVE X & COLLAPSE NAV ON CLICK
+        document.querySelectorAll('.menu-left a').forEach(function (link) {
+            link.addEventListener('click', function () {
+                document.querySelector('.nav-toggle').classList.remove('open');
+                document.querySelector('.menu-left').classList.remove('collapse');
+            });
+        });
+
+        // SHOW/HIDE NAV
+
+        // Hide Header on on scroll down
+        var didScroll;
+        var lastScrollTop = 0;
+        var delta = 5;
+        var navbarHeight = document.querySelector('header').offsetHeight;
+
+        window.addEventListener('scroll', function (event) {
+            didScroll = true;
+        });
+
+        setInterval(function () {
+            if (didScroll) {
+                hasScrolled();
+                didScroll = false;
+            }
+        }, 250);
+
+        function hasScrolled() {
+            var st = window.scrollY;
+
+            // Make sure they scroll more than delta
+            if (Math.abs(lastScrollTop - st) <= delta)
+                return;
+
+            // If they scrolled down and are past the navbar, add class .nav-up.
+            // This is necessary so you never see what is "behind" the navbar.
+            if (st > lastScrollTop && st > navbarHeight) {
+                // Scroll Down
+                document.querySelector('header').classList.remove('show-nav');
+                document.querySelector('header').classList.add('hide-nav');
+                document.querySelector('.nav-toggle').classList.remove('open');
+                document.querySelector('.menu-left').classList.remove('collapse');
+            } else {
+                // Scroll Up
+                if (st + window.innerHeight < document.documentElement.scrollHeight) {
+                    document.querySelector('header').classList.remove('hide-nav');
+                    document.querySelector('header').classList.add('show-nav');
+                }
+            }
+
+            lastScrollTop = st;
+        }
+
+    </script>
 
     <script>
         let text = document.getElementById('myText').innerHTML;
