social icons were fixed

--- a/index.html
+++ b/index.html
@@ -574,11 +574,11 @@
         <div class="col col1">
             <h3 class="footer_h3">Chennai Talents Pickelball Academy</h3>
             <div class="social">
-                <a href="#" target="_blank" class="link"><img src="https://assets.codepen.io/9051928/codepen_1.png"
+                <a href="#" target="_blank" class="link"><img src="./assets/instagram.webp"
                         alt="" /></a>
-                <a href="#" target="_blank" class="link"><img src="https://assets.codepen.io/9051928/x.png"
+                <a href="#" target="_blank" class="link"><img src="./assets/facebook.webp"
                         alt="" /></a>
-                <a href="#" target="_blank" class="link"><img src="https://assets.codepen.io/9051928/youtube_1.png"
+                <a href="#" target="_blank" class="link"><img src="./assets/youtube.webp"
                         alt="" /></a>
             </div>
             <p style="color: #818181; font-size: smaller"><span class="hack14-year"></span> &copy; All Rights Reserved
