preloader is set

--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 </head>
 
 <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <div class="hourglass"></div>
+    </div>
     <!-- Navbar -->
     <header>
         <div class="container">
