coach title was changed

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                                 </div>
                                 <img class="card-avatar" src="./assets/Vimal.png" alt="avatar" />
                                 <h1 class="card-fullname">Vimalraj Jayachandran</h1>
-                                <h2 class="card-jobtitle">PPR Certified Coach</h2>
+                                <h2 class="card-jobtitle">Founder & Head coach</h2>
                             </div>
                             <div class="card-main">
                                 <div class="card-section is-active" id="about">
@@ -149,6 +149,9 @@
                                     <div class="card-content">
                                         <div class="card-subtitle">ACHIEVEMENTS & EXPERIENCE</div>
                                         <div class="card-timeline">
+                                            <div class="card-item">
+                                                <div class="card-item-title">PPR Certified Coach</div>
+                                            </div>
                                             <div class="card-item">
                                                 <div class="card-item-title">Best Pickleball player in South India
                                                     (according to DUPR)</div>
@@ -255,7 +258,7 @@
                                     src="https://images.unsplash.com/photo-1549068106-b024baf5062d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80"
                                     alt="avatar" />
                                 <h1 class="card-fullname">Rohit Ahuja</h1>
-                                <h2 class="card-jobtitle">CTPBA Coach</h2>
+                                <h2 class="card-jobtitle">Founder & Associate coach</h2>
                             </div>
                             <div class="card-main">
                                 <div class="card-sections is-active" id="aboutt">
@@ -374,7 +377,7 @@
                                 </div>
                                 <img class="card-avatar" src="./assets/prasanna.jpg" alt="avatar" />
                                 <h1 class="card-fullname">Prasanna S</h1>
-                                <h2 class="card-jobtitle">CTPBA Coach</h2>
+                                <h2 class="card-jobtitle">Associate coach</h2>
                             </div>
                             <div class="card-main">
                                 <div class="card-sectionss is-active" id="abouttt">
