coach title was changed

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
                                 </div>
                                 <img class="card-avatar" src="./assets/prasanna.jpg" alt="avatar" />
                                 <h1 class="card-fullname">Prasanna S</h1>
-                                <h2 class="card-jobtitle">Associate coach</h2>
+                                <h2 class="card-jobtitle">Assistant coach</h2>
                             </div>
                             <div class="card-main">
                                 <div class="card-sectionss is-active" id="abouttt">
