coach title was changed

--- a/index.html
+++ b/index.html
@@ -416,28 +416,13 @@
                                         <div class="card-subtitle">ACHIEVEMENTS & EXPERIENCE</div>
                                         <div class="card-timeline">
                                             <div class="card-item">
-                                                <div class="card-item-title">2 time medalist in South India Premiere
-                                                    League</div>
+                                                <div class="card-item-title">Professional Pickleball Referee</div>
                                             </div>
                                             <div class="card-item">
-                                                <div class="card-item-title">2 time semi finalist in State championships
-                                                </div>
+                                                <div class="card-item-title">Software Engineer</div>
                                             </div>
                                             <div class="card-item">
-                                                <div class="card-item-title">Ice water Pickle master winner in mixed
-                                                    doubles</div>
-                                            </div>
-                                            <div class="card-item">
-                                                <div class="card-item-title">3 P20’s 4 medals</div>
-                                            </div>
-                                            <div class="card-item">
-                                                <div class="card-item-title"> Independent filmmaker</div>
-                                            </div>
-                                            <div class="card-item">
-                                                <div class="card-item-title">Asst director on 5 films</div>
-                                            </div>
-                                            <div class="card-item">
-                                                <div class="card-item-title">Line producer and ad film director</div>
+                                                <div class="card-item-title">Freelancer for SMM, Websites and Graphic Designs</div>
                                             </div>
                                         </div>
                                     </div>
